<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/qm_img"
            android:layout_width="142dp"
            android:layout_height="198dp"
            android:src="@drawable/qm" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="169dp"
            android:layout_height="150dp"
            android:layout_toRightOf="@id/qm_img"
            android:text="@string/welcome_title"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/q1_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/qm_img"
            android:layout_marginLeft="10dp"
            android:text="@string/question_1"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/score_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/qm_img"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="-28dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/qm_img"
            android:layout_toRightOf="@id/qm_img"
            android:text="@string/score"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/qm_img"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="-28dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/qm_img"
            android:layout_toRightOf="@id/qm_img"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/q1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q1_num"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/q1_full"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/q1_text_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/q1_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/q2_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q1_text_ans"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/question_2"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/q2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q2_num"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/q2_full"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/groupradio_q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q2_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_q2_op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_q2_op1"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_q2_op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_q2_op2"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_q2_op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_q2_op3"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_q2_op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_q2_op4"
                android:textSize="12sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/q3_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/groupradio_q2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/question_3"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/q3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q3_num"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/q3_full"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkbox_q3_op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q3_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/cb_1" />

        <CheckBox
            android:id="@+id/checkbox_q3_op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_q3_op1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/cb_2" />

        <CheckBox
            android:id="@+id/checkbox_q3_op3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_q3_op2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/cb_3" />

        <CheckBox
            android:id="@+id/checkbox_q3_op4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_q3_op3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/cb_4" />

        <TextView
            android:id="@+id/q4_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_q3_op4"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/question_4"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/q4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q4_num"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/q4_full"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/groupradio_q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/q4_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_q4_op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_q4_op1"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_q4_op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_q4_op2"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_q4_op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_q4_op3"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_q4_op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_q4_op4"
                android:textSize="12sp" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/groupradio_q4"
            android:layout_marginStart="155dp"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:onClick="submit"
            android:text="@string/submit" />


    </RelativeLayout>
</ScrollView>